<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_F5F5F5"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include
        android:id="@+id/title_bar"
        layout="@layout/common_title_bar" />


    <LinearLayout
        android:layout_below="@id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_FFFFFF"
        android:orientation="vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <TextView
            android:id="@+id/tv_account_safe"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableRight="@mipmap/icon_into_grey"
            android:gravity="center_vertical"
            android:text="@string/account_safe"
            android:textColor="@color/color_000000"
            android:textSize="15sp" />

        <include layout="@layout/view_divider" />

        <TextView
            android:id="@+id/tv_feed_back"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableRight="@mipmap/icon_into_grey"
            android:gravity="center_vertical"
            android:text="@string/feed_back"
            android:textColor="@color/color_000000"
            android:textSize="15sp" />

        <include layout="@layout/view_divider" />

        <TextView
            android:id="@+id/tv_about_us"

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableRight="@mipmap/icon_into_grey"
            android:gravity="center_vertical"
            android:text="@string/about_us"
            android:textColor="@color/color_000000"
            android:textSize="15sp" />

        <include layout="@layout/view_divider" />

        <TextView
            android:id="@+id/tv_service_custom"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableRight="@mipmap/icon_into_grey"
            android:gravity="center_vertical"
            android:text="@string/service_custom"
            android:textColor="@color/color_000000"
            android:textSize="15sp" />

        <include layout="@layout/view_divider" />

        <LinearLayout
            android:id="@+id/llyt_app_version"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/app_version"
                android:textColor="@color/color_000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:paddingRight="12dp"
                android:text="@string/version_num"
                android:textColor="@color/color_999999"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_log_out"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shape_top_red_radius8_ff6261"
        android:text="@string/log_out"
        android:textColor="@color/color_FFFFFF"
        android:textSize="15sp" />
</RelativeLayout>