<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_F5F5F5"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    android:orientation="vertical">

    <include layout="@layout/common_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_FFFFFF"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/phone_number"
            android:textColor="@color/color_000000" />

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/enter_the_phone_number"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/color_000000"
            android:textColorHint="@color/color_999999"
            android:textSize="15sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/color_F7F7F7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_verify_code"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/verification_code"
            android:maxLength="6"
            android:inputType="number"
            android:paddingLeft="12dp"
            android:paddingRight="10dp"
            android:textColor="@color/color_000000"
            android:textSize="15sp" />

        <com.benben.kupaizhibo.widget.VerifyCodeButton
            android:id="@+id/btn_get_verify_code"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/get_verification_code"
            android:textColor="@color/color_0FADFF"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/color_F7F7F7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_FFFFFF"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <TextView
            android:id="@+id/tv_input_title"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/new_phone_number"
            android:textColor="@color/color_000000" />

        <EditText
            android:id="@+id/edt_new_phone_number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/white"
            android:hint="@string/enter_the_new_phone_number"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/color_000000"
            android:textColorHint="@color/color_999999"
            android:textSize="15sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/shape_red_radius8_ff6261"
        android:text="@string/affirmance"
        android:textColor="@color/text_white"
        android:textSize="15sp" />
</LinearLayout>