<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlyt_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/llyt_profit_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_top_white_radius10_ffffff"
                android:orientation="vertical"
                android:paddingLeft="21dp"
                android:paddingTop="20dp"
                android:paddingBottom="28dp"
                android:paddingRight="21dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/color_1A1A1A"
                    android:text="@string/congratulations_your_getting"/>
                <TextView
                    android:id="@+id/tv_zhibo_shouyi"
                    android:layout_marginTop="28dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/live_profit"
                    android:textColor="@color/color_666666"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_huode_fensi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/get_fans"
                    android:textColor="@color/color_666666"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_zhibo_look_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/viewer_total"
                    android:textColor="@color/color_666666"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_zhibo_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/live_total_time"
                    android:textColor="@color/color_666666"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_sure"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/llyt_profit_info"
                android:background="@drawable/shape_bottom_red_radius10_ff6261"
                android:gravity="center"
                android:text="@string/affirmance"
                android:textColor="@color/color_FFFFFF"
                android:textSize="15sp" />
        </RelativeLayout>


    </FrameLayout>


</RelativeLayout>